6.手动模拟依赖注入