@@ -1,6 +1,9 @@
 package com.myspring.spring;
 
+import java.beans.Introspector;
 import java.io.File;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -45,6 +48,9 @@ public class MyApplicationContext {
                                     beanDefinition.setScope("singleton");
                                 }
                                 String beanName = clazz.getAnnotation(Component.class).value();
+                                if("".equals(beanName)) {
+                                    beanName = Introspector.decapitalize(clazz.getSimpleName());
+                                }
                                 beanDefinitionMap.put(beanName, beanDefinition);
                             }
                         } catch (ClassNotFoundException e) {
@@ -57,7 +63,7 @@ public class MyApplicationContext {
     }
     public Object getBean(String beanName) {
         BeanDefinition beanDefinition = beanDefinitionMap.get(beanName);
-        if(beanDefinition.getScope().equals("singleton")){
+        if("singleton".equals(beanDefinition.getScope()) || beanDefinition.getScope() == null){
             if(!beanMap.containsKey(beanName)) {
                 beanMap.put(beanName, createBean(beanDefinition));
             }
@@ -68,12 +74,19 @@ public class MyApplicationContext {
         }
     }
     private Object createBean(BeanDefinition beanDefinition) {
+        Class clazz = beanDefinition.getType();
         Object object;
         try {
-            object = beanDefinition.getType().newInstance();
+            object = clazz.getConstructor().newInstance();
+            for(Field field : clazz.getDeclaredFields()) {
+                if(field.isAnnotationPresent(Autowire.class)){
+                    field.setAccessible(true);
+                    field.set(object, getBean(field.getName()));
+                }
+            }
         } catch (InstantiationException e) {
             throw new RuntimeException(e);
-        } catch (IllegalAccessException e) {
+        } catch (IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
         return object;
